test_scores/negative_dimers/features/Q5U651.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5U651.pkl.xz